[Misc] Code cleanup of xwiki-platform-office-importer tests
(cherry picked from commit 7c146a6e3799e8110da9d5594eb29fa81deacb64)